fix(cart): updated icon colour to white when dark mode active (EC-37)

--- a/components/Buttons/Buttons.module.css
+++ b/components/Buttons/Buttons.module.css
@@ -5,24 +5,12 @@
 }
 
 /* Shopping Cart */
-.cart:hover {
+.cartInactive:hover {
     filter: invert(0%) sepia(94%) saturate(0%) hue-rotate(231deg) brightness(105%) contrast(106%);
 }
 
 .cartActive {
     filter: invert(42%) sepia(93%) saturate(100%) hue-rotate(87deg) brightness(0%) contrast(119%);
-}
-
-@media (prefers-color-scheme: dark) {
-
-    .cart:hover,
-    .cartActive:hover {
-        filter: invert(0%) sepia(94%) saturate(0%) hue-rotate(231deg) brightness(105%) contrast(106%);
-    }
-
-    .cartActive {
-        filter: brightness(0) invert(1)
-    }
 }
 
 /* White button */
